# tauri-nuxt-mobile

./: .eslintrc  .gitignore  README.md  TODO.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts
core/: Cargo.toml  tauri.conf.json
core/src/: lib.rs
pages/: index.vue
